--- a/Zuchniak/OBD2Bluetooth/app/src/main/res/values/strings.xml
+++ b/Zuchniak/OBD2Bluetooth/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">OBD2 Bluetooth</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_charts">Charts</string>
 </resources>
